manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amitgu-dev-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prod.amitgu.dev
    secretName: secret-tls
  rules:
  - host: prod.amitgu.dev
    http: 
      paths:
      - backend:
          service:
            name: express-server
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
